# werewolf_host

./: .gitignore  CLAUDE.md  Containerfile  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.yml  example.env  main.py  pyproject.toml  werewolf_game.md
.github/workflows/: ci.yml
app/: avatar.py  config.py  engine.py  narrator.py  spectator.py  ws_manager.py
app/models/: game.py  messages.py
src/: main.py
src/app/: avatar.py  config.py  eliminations.py  engine.py  narrator.py  night_handler.py  phases.py  rate_limiter.py  redis.py  scoring.py  spectator.py  voting.py  ws_manager.py
src/app/models/: game.py  messages.py
tests/: conftest.py  factories.py  test_api.py  test_config.py  test_engine.py  test_models_game.py  test_models_messages.py  test_narrator.py  test_rate_limiter.py  test_ws_manager.py
