[project]
name = "werewolf-host"
version = "0.1.0"
description = "AI Werewolf Hackathon Host Agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.41",
    "redis[hiredis]>=5.2",
    "websockets>=14.0",
    "openai>=1.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.0",
    "sse-starlette>=2.0",
    "Pillow>=11.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "fakeredis>=2.21",
    "pytest-mock>=3.14",
    "time-machine>=2.13",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
